--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Volkswagen</title>
     <script src="./js/main.js" type="module" defer></script>
     <script type="module" src="./js/objetos.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
