--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <h2>¡Buscá tu auto 0km y formas de pago!</h2>
+        <nav>
+            <h3>Simulá tu compra</h3>
+        </nav>
     </header>
 
 
