--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
         <h2>¡Buscá tu auto 0km y formas de pago!</h2>
         <nav>
-            <h3>Simulá tu compra</h3>
+            <a href="index.html">Inicio</a>
+            <a href="simulador.html">Simulá tu compra</a>
         </nav>
     </header>
 
