--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Volkswagen</title>
     <script src="./js/main.js" type="module" defer></script>
     <script type="module" src="./js/objetos.js" defer></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
-    <header>
+    <header style="justify-content: space-between;">
         <h2>¡Buscá tu auto 0km y formas de pago!</h2>
         <nav>
             <a href="index.html">Inicio</a>
