agregamos y actualizamos SASS al simulador.html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
-    <header style="justify-content: space-between;">
+    <header>
         <h2>¡Buscá tu auto 0km y formas de pago!</h2>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="simulador.html">Simulá tu compra</a>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="simulador.html">Simulá tu compra</a></li>
+            </ul>
         </nav>
     </header>
 
