--- a/simulador.html
+++ b/simulador.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/style.css">
     <script type="module" src="js/calculadora.js"></script>
 </head>
 <body>
@@ -31,7 +31,7 @@
                     <input type="number" id="presupuesto">
                 </label>
                 <label for="cuotaValor">
-                    Valor de cuota en $ARS:
+                    Valor de cuota en $ ARS:
                     <input type="number" id="cuotaValor">
                 </label>
                 <div class="form-footer">
